init🎉: 初始化项目

--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,26 @@
 # Clerk 登录必需
-CLERK_SECRET_KEY=""
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="pk_"
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
 
 # 数据库信息，评论系统必需
-DATABASE_HOST=""
-DATABASE_PASSWORD=""
-DATABASE_URL=""
-DATABASE_USERNAME=""
+DATABASE_HOST=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
+DATABASE_URL=
 
 # Sanity CMS 必需
-NEXT_PUBLIC_SANITY_DATASET=""
-NEXT_PUBLIC_SANITY_PROJECT_ID=""
-NEXT_PUBLIC_SANITY_USE_CDN="false"
+NEXT_PUBLIC_SANITY_DATASET=
+NEXT_PUBLIC_SANITY_PROJECT_ID=
+NEXT_PUBLIC_SANITY_USE_CDN=
 
 # Email 通知必需
-RESEND_API_KEY=""
-SITE_NOTIFICATION_EMAIL_TO="example@youremail.com"
+RESEND_API_KEY=
+SITE_NOTIFICATION_EMAIL_TO=
 
 # Upstash Redis 必需
-UPSTASH_REDIS_REST_TOKEN=""
-UPSTASH_REDIS_REST_URL="https://example.upstash.io"
+UPSTASH_REDIS_REST_TOKEN=
+UPSTASH_REDIS_REST_URL=
 
 # Vercel 必需
 VERCEL_ENV="development"
-EDGE_CONFIG=""
+EDGE_CONFIG=
